--- a/git/git-manual-basico.html
+++ b/git/git-manual-basico.html
@@ -712,7 +712,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>Si queremos actualizar nuestra copia local tenemos que utilizar el siguiente comando</p>
+<p>Si queremos actualizar nuestra copia local tenemos que utilizar el siguiente comando:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -723,7 +723,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="imageblock text-center">
 <div class="content">
-<img src="./images/clonar-repo-06.jpg" alt="clonar repo 06" width="900">
+<img src="./images/clonar-repo-07.jpg" alt="clonar repo 07" width="900">
 </div>
 </div>
 </div>
