--- a/01-Javascript/09_Agenda.html
+++ b/01-Javascript/09_Agenda.html
@@ -84,8 +84,8 @@ function vaciarFormulario(){
     }
 }
 
-function seleccionarContacto(){
-    console.log("CLICK!")
+function seleccionarContacto(idContacto){
+    console.log("ID:"+idContacto)
 }
 
 function rellenarTablaContactos(){
