Plantando el arbol DOM

--- a/01-Javascript/09_Agenda.html
+++ b/01-Javascript/09_Agenda.html
@@ -117,7 +117,12 @@ function rellenarTablaContactos(){
         td4.append(txt4)
         tr.append(td1, td2, td3, td4)
 
+        tr.onclick = seleccionarContacto
+
+
         tabla.append(tr)
+
+        //HOLA
 
     }
 
