Plantando el arbol DOM

--- a/01-Javascript/09_Agenda_Codigo_Limpio.html
+++ b/01-Javascript/09_Agenda_Codigo_Limpio.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 
+????????A VER
+
+
 <script type="application/javascript">
 
 //Declaramos al array de contactos como una variable global
