--- a/git/git-manual-basico.html
+++ b/git/git-manual-basico.html
@@ -726,6 +726,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <img src="./images/clonar-repo-07.jpg" alt="clonar repo 07" width="900">
 </div>
 </div>
+<div class="paragraph">
+<p>Si por cualquier motivo hubieramos modificado nuestros ficheros locales y queremos
+obtener nuevmente una copia exacta de lo existente en el repositorio remoto
+debemos ejecutar estos dos parámetros en orden:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>git stash</p>
+</li>
+<li>
+<p>git pull</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
