Closures de mi corazon

--- a/01-Javascript/06_DHTML.html
+++ b/01-Javascript/06_DHTML.html
@@ -65,7 +65,15 @@ function obtenerListadoPeliculas(){
         { 
           titulo   : 'Alien',
           director : 'Ridley Scott',
-          genero   : 'Ci-Fi' 
+          genero   : 'Ci-Fi',
+          actores  : [
+              {
+                nombre : 'Harrison For'
+              },
+              {
+                nombre : 'While Smith'
+              },
+          ] 
         },
         { 
           titulo   : 'Cazafantasmas',
