Closures de mi corazon

--- a/01-Javascript/09_Agenda.html
+++ b/01-Javascript/09_Agenda.html
@@ -187,12 +187,14 @@ function modificarContacto(){
             rellenarTablaContactos()
             break
         }
-    }
-    
+    }    
 
 }
 
 function borrarContacto(){
+
+    //SAFDFGFSDHGFJHTD
+
 
 }
 
@@ -205,7 +207,7 @@ function guardarContactos(){
     //pestaña está abierta
     //
     //Los valores guardados en el localStorage se asocian al sitio y permanecen en el navegador
-    //aunque se cierre (PEro si el usuario vacía la caché se borra)
+    //aunque se cierre (Pero si el usuario vacía la caché se borra)
     //
     //Tanto la clave como el valor serán cadenas de texto
     //Session y Local storage tienen las mismas funciones:
